tests/fixtures/errors/invalid_preproc_concat_unsupported.puml
@startuml
!function Join($a##$b)
!return "x"
!endfunction
A -> B: hi
@enduml
